[package]
name = "socks5"
version = "0.1.0"
authors = ["sakeven <sakeven.jiang@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
chacha = "0.3.0"
rand = "0.8.2"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
aes-gcm = "0.8.0"
futures = "0.3.12"
bytes = "1.0.1"
rust-crypto = "0.2.36"
hex = "0.4.2"
base64 = "0.13.0"
bstr = "0.2.15"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
