[package]
name = "socks5"
version = "0.1.0"
authors = ["sakeven <sakeven.jiang@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
rand = "0.8.3"
serde_yaml = "0.8"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
aes-gcm = "0.8.0"
futures = "0.3.13"
bytes = "1.0.1"
rust-crypto = "0.2.36"
hex = "0.4.2"
base64 = "0.13.0"
bstr = "0.2.15"
clap = "2.33.3"
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.4.0"
hyper = { version = "0.14", features = ["full"] }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
